# slambook_self_practice

./: README.md
ch2/: CMakeLists.txt  README.md
ch2/lib/: libhelloslam.cpp
ch2/src/: helloslam.cpp  usehello.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: .eigenGeometry.cpp.swp  CMakeLists.txt  eigenGeometry.cpp
ch4/: .useSophus.cpp.swp  CMakeLists.txt  useSophus.cpp
